<resources>
    <string name="app_name">StockerRanker</string>
    <string name="name">Coach Grades</string>
    <string name="login">Login</string>
    <string name="create">Create Account</string>
    <string name="email">Email\: </string>
    <string name="password">Password\: </string>
    <string name="conf_password">Confirm Password\: </string>
    <string name="logout">Log Out</string>
    <string name="profile">View Profile</string>
    <string name="pleaseEnter">Please enter your thoughts on this coach.</string>
    <string name="submit">Submit</string>
</resources>