<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="400dp"/>

    <EditText
        android:id="@+id/ptName"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_margin="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textSize="40sp"
        android:background="@color/gold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintLeft_toLeftOf="@id/ivLogo"
        app:layout_constraintRight_toRightOf="@id/ivLogo" />

    <EditText
        android:id="@+id/ptEmail"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="12sp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@id/ptName"
        app:layout_constraintTop_toBottomOf="@id/ptName" />

    <EditText
        android:id="@+id/ptPassword"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/ptEmail"
        app:layout_constraintTop_toBottomOf="@id/ptEmail" />

    <EditText
        android:id="@+id/ptConfPassword"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/conf_password"
        android:textAlignment="center"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/ptPassword"
        app:layout_constraintTop_toBottomOf="@id/ptPassword"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toRightOf="@id/ptEmail"
        app:layout_constraintBottom_toBottomOf="@id/ptEmail"
        app:layout_constraintTop_toTopOf="@id/ptEmail"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toRightOf="@id/ptPassword"
        app:layout_constraintBottom_toBottomOf="@id/ptPassword"
        app:layout_constraintTop_toTopOf="@id/ptPassword"/>

    <TextView
        android:id="@+id/tvConfPassword"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toRightOf="@id/ptConfPassword"
        app:layout_constraintBottom_toBottomOf="@id/ptConfPassword"
        app:layout_constraintTop_toTopOf="@id/ptConfPassword"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"
        app:backgroundTint="@color/green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>