<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="300dp"/>

    <EditText
        android:id="@+id/ptName"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_margin="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textSize="40sp"
        android:background="@color/gold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintLeft_toLeftOf="@id/ivLogo"
        app:layout_constraintRight_toRightOf="@id/ivLogo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/ptName"
        app:layout_constraintLeft_toLeftOf="@id/ptName"
        app:layout_constraintRight_toRightOf="@id/ptName" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintLeft_toLeftOf="@id/btnLogin"
        app:layout_constraintRight_toRightOf="@id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>