<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/name"
        android:textColor="@color/dark_gray"
        android:textSize="30sp"
        android:textAlignment="center"
        android:background="@color/gold"
        app:layout_constraintTop_toBottomOf="@id/btnLogout"
        app:layout_constraintLeft_toLeftOf="@id/btnLogout"
        app:layout_constraintRight_toRightOf="@id/btnProfile"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/logout"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/profile"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnCard1"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_margin="70dp"
        app:layout_constraintTop_toTopOf="@id/tvName"
        app:layout_constraintRight_toRightOf="@id/tvName"
        app:layout_constraintLeft_toLeftOf="@id/tvName"
        />

    <Button
        android:id="@+id/btnCard2"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnCard1"
        app:layout_constraintRight_toRightOf="@id/btnCard1"
        app:layout_constraintLeft_toLeftOf="@id/btnCard1"
        />

    <Button
        android:id="@+id/btnCard3"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnCard2"
        app:layout_constraintRight_toRightOf="@id/btnCard2"
        app:layout_constraintLeft_toLeftOf="@id/btnCard2"
        />

    <Button
        android:id="@+id/btnCard4"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnCard3"
        app:layout_constraintRight_toRightOf="@id/btnCard3"
        app:layout_constraintLeft_toLeftOf="@id/btnCard3"
        />



</androidx.constraintlayout.widget.ConstraintLayout>